--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     },
     "autoload": {
         "classmap": [
-            "Calculatrice.php",
+            "Calculatrice.php"
         ]
     },
     "license": "MIT",
